--- a/maroc.html
+++ b/maroc.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,19 +7,59 @@
     <link rel="stylesheet" href="src/css/style.css" />
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="/index.html">
-            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban">
+            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
         </a>
-        <button>
-            <span></span>
-          </button>
-          <ul >
-            <li><a href="/infos.html" >Infos</a></li>
-            <li><a href="/billetterie.html" >Billetterie</a></li>
-            <li><a href="/shigeru-Ban.html" >Shigeru Ban</a></li>
-            <li><a href="/Oeuvres.html" >Oeuvres</a></li>
-          </ul>
+        <div class="dropdown"> 
+            <button class="dropbtn">
+                <img src="/public/icon/menu-blanc.svg" alt="Menu">
+            </button>
+            <nav class="dropdown-content">
+                <ul class="menu">
+                    <li><a href="/infos.html" class="menu_texte">Infos</a></li>
+                    <li><a href="/billetterie.html" class="menu_texte">Billetterie</a></li>
+                    <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
+                    <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
+                </ul>
+                <a href="#menu">
+                    <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
+                </a>
+            </nav>
+        </div>
     </header>
+<main>
+    <section class="section">
+        <h2 class="Batiment__Titre   Batiment__Titre__Maroc"> <strong>Temporary housing in Marrakesh</strong></h2>
+        <article>
+            <img class="Batiment__img"  class="Batiment__img" src="/public/img/Maroc/maroc.webp" alt="Vue intérieur des maison temporaire">
+            <p class="légende">Vue intérieur des maison temporaire</p>
+            <p class="Batiment_texte">En réponse au tremblement de terre de 2023 au Maroc, le Réseau d'architectes volontaires (VAN) + Shigeru Ban Architects, en collaboration avec l'École nationale d'architecture de Marrakech, ont construit un logement temporaire à Marrakech.</p>
+        </article>
+        <article>
+            <img class="Batiment__img" src="/public/img/Maroc/Maroc-2.webp" alt="image pendant la construction des maisons">
+            <p class="légende">image pendant la construction des maisons</p>
+            <p  class="Batiment_texte">Le prototype avait été construit lors du tremblement de terre Turquie-Syrie de 2023.Les fondations du logement sont composées de caisses de bière remplies de sacs de sable et des panneaux de bois sont utilisés pour construire les murs entre les colonnes en tubes de papier, placées tous les 1,2 mètres. </p>
+        </article>
+        <article>
+            <img class="Batiment__img" src="/public/img/Maroc/maroc-3.webp" alt="image de la maison nue ">
+            <p class="légende">image de la maison nue </p>
+        </article>
+        <article>
+            <p class="Batiment_texte">Cela permet de réaliser la construction dans un court laps de temps. Le toit est constitué de cadres en tubes de papier et de platelage en contreplaqué, et de grands trous sont découpés dans le contreplaqué pour assurer la sécurité pendant la construction, permettant aux personnes de travailler depuis le trou au lieu de grimper sur le toit.</p>
+            <img class="Batiment__img" src="/public/img/Maroc/Maroc-4.webp" alt="photo de groupe vec toute les personnes ayant participer a la construction">
+            <p class="légende">photo de groupe vec toute les personnes ayant participer a la construction</p>
+        </article>
+    </section> 
+    <section class="section__marrons">
+        <a href="/Oeuvres.html" class="Batiment__retour">Retour vers les Oeuvres </a>
+    </section> 
+</main> 
+<footer class="footer">
+    <p class="footer__texte">Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
+    <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR" class="footer__facebook"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
+    <a href="https://www.instagram.com/fondationcartier/?hl=fr" class="footer__instagram"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
+    <a href="/index.html" class="footer__logo"><img src="/public/icon/logo-footer.svg" alt="Logo exposition Shigeru Ban"></a>
+</footer>
 </body>
 </html>
