--- a/simose.html
+++ b/simose.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,19 +7,59 @@
     <link rel="stylesheet" href="src/css/style.css" />
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="/index.html">
-            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban">
+            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
         </a>
-        <button>
-            <span></span>
-          </button>
-          <ul >
-            <li><a href="/infos.html" >Infos</a></li>
-            <li><a href="/billetterie.html" >Billetterie</a></li>
-            <li><a href="/shigeru-Ban.html" >Shigeru Ban</a></li>
-            <li><a href="/Oeuvres.html" >Oeuvres</a></li>
-          </ul>
+        <div class="dropdown"> 
+            <button class="dropbtn">
+                <img src="/public/icon/menu-blanc.svg" alt="Menu">
+            </button>
+            <nav class="dropdown-content">
+                <ul class="menu">
+                    <li><a href="/infos.html" class="menu_texte">Infos</a></li>
+                    <li><a href="/billetterie.html" class="menu_texte">Billetterie</a></li>
+                    <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
+                    <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
+                </ul>
+                <a href="#menu">
+                    <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
+                </a>
+            </nav>
+        </div>
     </header>
+<main>
+    <section class="section">
+        <h2 class="Batiment__Titre"> <strong>Simose</strong></h2>
+        <article>
+            <img class="Batiment__img"  class="Batiment__img" src="/public/img/simose/simose.webp" alt="Vue intérieur du musée">
+            <p class="légende">Vue intérieur du musée</p>
+            <p class="Batiment_texte">L'installation se compose d'un musée, de 10 hébergements de style villa et d'un restaurant sur un site de 4,6 hectares face à la mer intérieure de Seto. Le paysage est prévu pour ressembler au « Jardin d'Émile Gallé » dans l'une des œuvres d'Émile Gallé, une des collections du musée.</p>
+        </article>
+        <article>
+            <img class="Batiment__img" src="/public/img/simose/simose2.webp" alt="Vue de nuit de l'installation">
+            <p class="légende">Vue de nuit de l'installation</p>
+            <p  class="Batiment_texte">Admirez les peintures japonaises et occidentales modernes et admirez la beauté de l'archipel de Setouchi depuis le toit. Tout ce que vous voyez et touchez éveillera la sensibilité des visiteurs, comme la salle d'exposition mobile inspirée des îles flottantes dans la mer de l'architecte Shigeru Ban ou le jardin nommé d'après les plantes préférées d'Emile Gallé.</p>
+        </article>
+        <article>
+            <img class="Batiment__img" src="/public/img/simose/simose3.webp" alt="image de nuit plus global du domaine ">
+            <p class="légende">image de nuit plus global du domaine</p>
+        </article>
+        <article>
+            <p class="Batiment_texte">Des espaces que vous n'avez jamais vus auparavant, des paysages au-delà de votre imagination et le charme d'une architecture dont vous ignoriez l'existence. De nombreuses surprises attendent les visiteurs. 10 villas aux allures de villa conçues par Shigeru Ban. Passez un moment de détente sur la plage surplombant les îles de Setouchi. Pour les repas, nous vous proposons une cuisine française qui profite des produits locaux. Il s'agit d'une auberge d'art où vous pourrez profiter d'une promenade dans le musée et les jardins sur place</p>
+            <img class="Batiment__img" src="/public/img/simose/simose4.webp" alt="Image intérieur d'une des villa">
+            <p class="légende">Image intérieur d'une des villa</p>
+        </article>
+    </section> 
+    <section class="section__marrons">
+        <a href="/Oeuvres.html" class="Batiment__retour">Retour vers les Oeuvres </a>
+    </section> 
+</main> 
+<footer class="footer">
+    <p class="footer__texte">Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
+    <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR" class="footer__facebook"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
+    <a href="https://www.instagram.com/fondationcartier/?hl=fr" class="footer__instagram"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
+    <a href="/index.html" class="footer__logo"><img src="/public/icon/logo-footer.svg" alt="Logo exposition Shigeru Ban"></a>
+</footer>
 </body>
 </html>
