--- a/suiden.html
+++ b/suiden.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,50 +7,59 @@
     <link rel="stylesheet" href="src/css/style.css" />
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="/index.html">
-            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban">
+            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
         </a>
-        <button>
-            <span></span>
-          </button>
-          <ul >
-            <li><a href="/infos.html" >Infos</a></li>
-            <li><a href="/billetterie.html" >Billetterie</a></li>
-            <li><a href="/shigeru-Ban.html" >Shigeru Ban</a></li>
-            <li><a href="/Oeuvres.html" >Oeuvres</a></li>
-          </ul>
+        <div class="dropdown"> 
+            <button class="dropbtn">
+                <img src="/public/icon/menu-blanc.svg" alt="Menu">
+            </button>
+            <nav class="dropdown-content">
+                <ul class="menu">
+                    <li><a href="/infos.html" class="menu_texte">Infos</a></li>
+                    <li><a href="/billetterie.html" class="menu_texte">Billetterie</a></li>
+                    <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
+                    <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
+                </ul>
+                <a href="#menu">
+                    <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
+                </a>
+            </nav>
+        </div>
     </header>
 <main>
-    <section>
-        <h2>Shonai hotel Suiden terrasse spa</h2>
+    <section class="section">
+        <h2 class="Batiment__Titre Batiment__Titre__Maroc"> <strong>Shonai hotel Suiden terrasse spa</strong></h2>
         <article>
-            <img src="/public/img/suiden/suiden1.webp" alt="photo extérieur du spa">
-            <p>photo extérieur du spa</p>
-            <p>Conçue par l'architecte de renommée mondiale Shigeru Ban, SUIDEN TERRASSE a été conçue pour que les rizières puissent être ressenties et ressenties où que vous soyez dans le bâtiment.</p>
+            <img class="Batiment__img"  class="Batiment__img" src="/public/img/suiden/suiden1.webp" alt="Vue extérieur du spa">
+            <p class="légende">Vue extérieur du spa</p>
+            <p class="Batiment_texte">Conçue par l'architecte de renommée mondiale Shigeru Ban, SUIDEN TERRASSE a été conçue pour que les rizières puissent être ressenties et ressenties où que vous soyez dans le bâtiment.</p>
         </article>
         <article>
-            <img src="/public/img/suiden/suiden2.webp" alt="Vue d'un bassin d'eau du spa">
-            <p>Vue d'un bassin d'eau du spa</p>
-            <p>Des plaines de Dewasanzan et Shonai à la mer du Japon. La région de Shonai, dans la préfecture de Yamagata, possède une nature riche.</p>
+            <img class="Batiment__img" src="/public/img/suiden/suiden2.webp" alt="image des bassins extérieur du spa">
+            <p class="légende">image des bassins extérieur du spa</p>
+            <p  class="Batiment_texte">Des plaines de Dewasanzan et Shonai à la mer du Japon. La région de Shonai, dans la préfecture de Yamagata, possède une nature riche.</p>
         </article>
         <article>
-            <img src="/public/img/suiden/suiden4.webp" alt="Vue intérieur du spa">
-            <p>Vue intérieur du spa</p>
-            <p>Le paysage emblématique de cette terre - les rizières (« SUIDEN »） - est ce qui a inspiré la création de SUIDEN TERRASSE. Flottant au milieu des rizières, se fondant dans les paysages environnants et les paysages ruraux.</p>
-            <img src="/public/img/suiden/suiden3.webp" alt="Vue sur un bassin du spa">
-            <p>Vue sur un bassin du spa</p>
+            <img class="Batiment__img" src="/public/img/suiden/suiden4.webp" alt="image du mobilier d'intérieur">
+            <p class="légende">image du mobilier d'intérieur</p>
         </article>
-    </section>
-    <section>
-        <h3>Retour vers les Oeuvres </h3>
-    </section>
-</main>  
-    <footer>
-        <p>Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
-        <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
-        <a href="https://www.instagram.com/fondationcartier/?hl=fr"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
-        <a href="/index.html"><img src="/public/icon/LOGO.svg" alt="Logo exposition Shigeru Ban"></a>
-    </footer>
+        <article>
+            <p class="Batiment_texte"> Le paysage emblématique de cette terre - les rizières (« SUIDEN »） - est ce qui a inspiré la création de SUIDEN TERRASSE. Flottant au milieu des rizières, se fondant dans les paysages environnants et les paysages ruraux.</p>
+            <img class="Batiment__img" src="/public/img/suiden/suiden3.webp" alt="image d'un bassin du spa">
+            <p class="légende">image d'un bassin du spa</p>
+        </article>
+    </section> 
+    <section class="section__marrons">
+        <a href="/Oeuvres.html" class="Batiment__retour">Retour vers les Oeuvres </a>
+    </section> 
+</main> 
+<footer class="footer">
+    <p class="footer__texte">Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
+    <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR" class="footer__facebook"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
+    <a href="https://www.instagram.com/fondationcartier/?hl=fr" class="footer__instagram"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
+    <a href="/index.html" class="footer__logo"><img src="/public/icon/logo-footer.svg" alt="Logo exposition Shigeru Ban"></a>
+</footer>
 </body>
 </html>
