--- a/Oeuvres.html
+++ b/Oeuvres.html
@@ -8,64 +8,75 @@
     <script src="//unpkg.com/alpinejs" defer></script>
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="/index.html">
-            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban">
+            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
         </a>
-        <button>
-            <span></span>
-          </button>
-          <ul >
-            <li><a href="/infos.html" >Infos</a></li>
-            <li><a href="/billetterie.html" >Billetterie</a></li>
-            <li><a href="/shigeru-Ban.html" >Shigeru Ban</a></li>
-            <li><a href="/Oeuvres.html" >Oeuvres</a></li>
-          </ul>
+        <div class="dropdown"> 
+            <button class="dropbtn">
+                <img src="/public/icon/menu-blanc.svg" alt="Menu">
+            </button>
+            <nav class="dropdown-content">
+                <ul class="menu">
+                    <li><a href="/infos.html" class="menu_texte">Infos</a></li>
+                    <li><a href="/billetterie.html" class="menu_texte">Billetterie</a></li>
+                    <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
+                    <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
+                </ul>
+                <a href="#menu">
+                    <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
+                </a>
+            </nav>
+        </div>
     </header>
 <main>
-    <h2>Œuvres </h2>  
-    <p>Les plus belle œuvres de Shigeru Ban qui ont été construites. </p> 
-    <article>
-        <h3>2008</h3>
-        <a href="/maison.html"><img src="/public/img/Oeuvres/oeuvres5.webp" alt="Crescent House"></a>
-        <a href="/maison.html">Crescent House</a>
-    </article> 
-    <article>
-        <h3>2010</h3>
-        <a href="/Ponpidou.html"><img src="/public/img/Oeuvres/oeuvres4.webp" alt="Centre Ponpidou Metz"></a>
-        <a href="/Ponpidou.html">Centre Ponpidou Metz</a>
-    </article>
-    <article>
-        <h3>2013</h3>
-        <a href="/cathedral.html"><img src="/public/img/Oeuvres/oeuvres1.webp" alt="Cardboard Cathedral"></a>
-        <a href="/cathedral.html">Cardboard Cathedral</a>
-    </article>
-    <article>
-        <h3>2017</h3>
-        <a href="/népal.html"><img src="/public/img/Oeuvres/oeuvres7.webp" alt="Khumjung secondary school "></a>
-        <a href="/népal.html">Khumjung secondary school </a>
-    </article>
-    <article>
-        <h3>2021</h3>
-        <a href="/suiden.html"><img src="/public/img/Oeuvres/oeuvres8.webp" alt="Shonai hotel Suiden terrasse spa "></a>
-        <a href="/suiden.html">Shonai hotel Suiden terrasse spa</a>
-    </article>
-    <article>
-        <h3>2022</h3>
-        <a href="/hotel.html"><img src="/public/img/Oeuvres/oeuvres6.webp" alt="ZEN Wellness SEINEI"></a>
-        <a href="/hotel.html">ZEN Wellness SEINEI</a>
-    </article>
-    <article>
-        <h3>2023</h3>
-        <a href="/maroc.html"><img src="/public/img/Oeuvres/oeuvres2.webp" alt="Temporary housing in Marrakesh"></a>
-        <a href="/maroc.html">Temporary housing in Marrakesh</a>
-    </article>
-    <article>
-        <h3>2023</h3>
-        <a href="/simose.html"><img src="/public/img/Oeuvres/oeuvres3.webp" alt="Simose"></a>
-        <a href="/simose.html">Simose</a>
-    </article>
-    <section x-data="{
+    <section class="section__marrons">
+        <h2>Œuvres </h2>  
+        <p>Les plus belle œuvres de Shigeru Ban qui ont été construites. </p> 
+        <article>
+            <h3>2008</h3>
+            <a href="/maison.html"><img src="/public/img/Oeuvres/oeuvres5.webp" alt="Crescent House"></a>
+            <a href="/maison.html">Crescent House</a>
+        </article> 
+        <article>
+            <h3>2010</h3>
+            <a href="/Ponpidou.html"><img src="/public/img/Oeuvres/oeuvres4.webp" alt="Centre Ponpidou Metz"></a>
+            <a href="/Ponpidou.html">Centre Ponpidou Metz</a>
+        </article>
+        <article>
+            <h3>2013</h3>
+            <a href="/cathedral.html"><img src="/public/img/Oeuvres/oeuvres1.webp" alt="Cardboard Cathedral"></a>
+            <a href="/cathedral.html">Cardboard Cathedral</a>
+        </article>
+        <article>
+            <h3>2017</h3>
+            <a href="/népal.html"><img src="/public/img/Oeuvres/oeuvres7.webp" alt="Khumjung secondary school "></a>
+            <a href="/népal.html">Khumjung secondary school </a>
+        </article>
+        <article>
+            <h3>2021</h3>
+            <a href="/suiden.html"><img src="/public/img/Oeuvres/oeuvres8.webp" alt="Shonai hotel Suiden terrasse spa "></a>
+            <a href="/suiden.html">Shonai hotel Suiden terrasse spa</a>
+        </article>
+        <article>
+            <h3>2022</h3>
+            <a href="/hotel.html"><img src="/public/img/Oeuvres/oeuvres6.webp" alt="ZEN Wellness SEINEI"></a>
+            <a href="/hotel.html">ZEN Wellness SEINEI</a>
+        </article>
+        <article>
+            <h3>2023</h3>
+            <a href="/maroc.html"><img src="/public/img/Oeuvres/oeuvres2.webp" alt="Temporary housing in Marrakesh"></a>
+            <a href="/maroc.html">Temporary housing in Marrakesh</a>
+        </article>
+        <article>
+            <h3>2023</h3>
+            <a href="/simose.html"><img src="/public/img/Oeuvres/oeuvres3.webp" alt="Simose"></a>
+            <a href="/simose.html">Simose</a>
+        </article>
+    </section>
+    
+    <section class="section__marrons"
+    x-data="{
         imageUrl:'/public/img/Oeuvres/galerie/mini/historical-museum-mini.jpg'
     }" >
         <h2 >Galerie</h2>
@@ -106,11 +117,11 @@
 
     </section>
 </main>
-    <footer>
-        <p>Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
-        <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
-        <a href="https://www.instagram.com/fondationcartier/?hl=fr"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
-        <a href="/index.html"><img src="/public/icon/LOGO.svg" alt="Logo exposition Shigeru Ban"></a>
-    </footer>
+<footer class="footer">
+    <p class="footer__texte">Venez découvrir l’exposition a la fondation cartier et suivre les actus sur nos réseaux.</p>
+    <a href="https://www.facebook.com/FondationCartier/?locale=fr_FR" class="footer__facebook"><img src="/public/icon/facebook_black_logo_icon_147136.svg" alt="logo facebook"></a>
+    <a href="https://www.instagram.com/fondationcartier/?hl=fr" class="footer__instagram"><img src="/public/icon/instagram_black_logo_icon_147122.svg" alt="logo instagram"></a>
+    <a href="/index.html" class="footer__logo"><img src="/public/icon/logo-footer.svg" alt="Logo exposition Shigeru Ban"></a>
+</footer>
 </body>
 </html>
