--- a/Oeuvres.html
+++ b/Oeuvres.html
@@ -75,12 +75,12 @@
         </article>
     </section>
     
-    <section class="section__marrons"
+    <section class="galerie" 
     x-data="{
-        imageUrl:'/public/img/Oeuvres/galerie/mini/historical-museum-mini.jpg'
+        imageUrl:'public/img/Oeuvres/galerie/max/historical-museum-max.jpg'
     }" >
-        <h2 >Galerie</h2>
-    <p >Les plus belle œuvres de Shigeru Ban qui ont été réalisé pour des concours. </p>
+        <h2 class="galerie__titre">Galerie</h2>
+    <p class="galerie__texte">Les plus belle œuvres de Shigeru Ban qui ont été réalisé pour des concours. </p>
     <img 
     class="img"
     src="/public/img/Oeuvres/galerie/mini/historical-museum-mini.jpg" alt="historical-museum"
