--- a/Oeuvres.html
+++ b/Oeuvres.html
@@ -31,48 +31,52 @@
     </header>
 <main>
     <section class="section__marrons">
-        <h2>Œuvres </h2>  
-        <p>Les plus belle œuvres de Shigeru Ban qui ont été construites. </p> 
-        <article>
-            <h3>2008</h3>
-            <a href="/maison.html"><img src="/public/img/Oeuvres/oeuvres5.webp" alt="Crescent House"></a>
-            <a href="/maison.html">Crescent House</a>
+        <h2 class="Oeuvres__titre">Œuvres </h2>  
+        <p class="Oeuvres__texte">Les plus belle œuvres de Shigeru Ban qui ont été construites. </p> 
+        <div class="flèche">
+            <div class="line"></div>
+            <div class="arrow"></div>
+        <article class="Oeuvres">
+            <h3 class="Oeuvres__dates">2008</h3>
+            <a href="/maison.html"><img src="/public/img/Oeuvres/oeuvres5.webp" alt="Crescent House" class="Oeuvres__img"></a>
+            <a href="/maison.html" class="Oeuvres__nom">Crescent House</a>
         </article> 
-        <article>
-            <h3>2010</h3>
-            <a href="/Ponpidou.html"><img src="/public/img/Oeuvres/oeuvres4.webp" alt="Centre Ponpidou Metz"></a>
-            <a href="/Ponpidou.html">Centre Ponpidou Metz</a>
+        <article class="Oeuvres">
+            <h3 class="Oeuvres__dates">2010</h3>
+            <a href="/Ponpidou.html"><img src="/public/img/Oeuvres/oeuvres4.webp" alt="Centre Ponpidou Metz" class="Oeuvres__img"></a>
+            <a href="/Ponpidou.html" class="Oeuvres__nom  Oeuvres__nom_bis">Centre Ponpidou Metz</a>
         </article>
-        <article>
-            <h3>2013</h3>
-            <a href="/cathedral.html"><img src="/public/img/Oeuvres/oeuvres1.webp" alt="Cardboard Cathedral"></a>
-            <a href="/cathedral.html">Cardboard Cathedral</a>
+        <article class="Oeuvres">
+            <h3 class="Oeuvres__dates">2013</h3>
+            <a href="/cathedral.html"><img src="/public/img/Oeuvres/oeuvres1.webp" alt="Cardboard Cathedral" class="Oeuvres__img"></a>
+            <a href="/cathedral.html" class="Oeuvres__nom  Oeuvres__nom_bis">Cardboard Cathedral</a>
         </article>
-        <article>
-            <h3>2017</h3>
-            <a href="/népal.html"><img src="/public/img/Oeuvres/oeuvres7.webp" alt="Khumjung secondary school "></a>
-            <a href="/népal.html">Khumjung secondary school </a>
+        <article class="Oeuvres">
+            <h3 class="Oeuvres__dates">2017</h3>
+            <a href="/népal.html"><img src="/public/img/Oeuvres/oeuvres7.webp" alt="Khumjung secondary school " class="Oeuvres__img"></a>
+            <a href="/népal.html" class="Oeuvres__nom  Oeuvres__nom_bis">Khumjung secondary school </a>
         </article>
-        <article>
-            <h3>2021</h3>
-            <a href="/suiden.html"><img src="/public/img/Oeuvres/oeuvres8.webp" alt="Shonai hotel Suiden terrasse spa "></a>
-            <a href="/suiden.html">Shonai hotel Suiden terrasse spa</a>
+        <article class="Oeuvres">
+            <h3 class="Oeuvres__dates">2021</h3>
+            <a href="/suiden.html"><img src="/public/img/Oeuvres/oeuvres8.webp" alt="Shonai hotel Suiden terrasse spa " class="Oeuvres__img"></a>
+            <a href="/suiden.html" class="Oeuvres__nom Oeuvres__nom_bis">Shonai hotel Suiden terrasse spa</a>
         </article>
-        <article>
-            <h3>2022</h3>
-            <a href="/hotel.html"><img src="/public/img/Oeuvres/oeuvres6.webp" alt="ZEN Wellness SEINEI"></a>
-            <a href="/hotel.html">ZEN Wellness SEINEI</a>
+        <article class="Oeuvres">
+            <h3 class="Oeuvres__dates">2022</h3>
+            <a href="/hotel.html"><img src="/public/img/Oeuvres/oeuvres6.webp" alt="ZEN Wellness SEINEI" class="Oeuvres__img"></a>
+            <a href="/hotel.html" class="Oeuvres__nom  Oeuvres__nom_bis">ZEN Wellness SEINEI</a>
         </article>
-        <article>
-            <h3>2023</h3>
-            <a href="/maroc.html"><img src="/public/img/Oeuvres/oeuvres2.webp" alt="Temporary housing in Marrakesh"></a>
-            <a href="/maroc.html">Temporary housing in Marrakesh</a>
+        <article class="Oeuvres">
+            <h3 class="Oeuvres__dates">2023</h3>
+            <a href="/maroc.html"><img src="/public/img/Oeuvres/oeuvres2.webp" alt="Temporary housing in Marrakesh" class="Oeuvres__img"></a>
+            <a href="/maroc.html" class="Oeuvres__nom Oeuvres__nom_bis">Temporary housing in Marrakesh</a>
         </article>
-        <article>
-            <h3>2023</h3>
-            <a href="/simose.html"><img src="/public/img/Oeuvres/oeuvres3.webp" alt="Simose"></a>
-            <a href="/simose.html">Simose</a>
+        <article class="Oeuvres">
+            <h3 class="Oeuvres__dates">2023</h3>
+            <a href="/simose.html"><img src="/public/img/Oeuvres/oeuvres3.webp" alt="Simose" class="Oeuvres__img"></a>
+            <a href="/simose.html" class="Oeuvres__nom">Simose</a>
         </article>
+        </div>
     </section>
     
     <section class="galerie" 
