essaye de changer le menu

--- a/Oeuvres.html
+++ b/Oeuvres.html
@@ -25,6 +25,7 @@
                 </ul>
                 <a href="#menu">
                     <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
+                    <a href="/index.html"><img src="/public/icon/logo-footer.svg" alt="Logo Shigeru Ban" class="logo_menu"></a>
                 </a>
             </nav>
         </div>
