--- a/Oeuvres.html
+++ b/Oeuvres.html
@@ -13,9 +13,9 @@
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
         </a>
         <div class="dropdown"> 
-            <button class="dropbtn">
+            <a class="dropbtn">
                 <img src="/public/icon/menu-blanc.svg" alt="Menu">
-            </button>
+            </a>
             <nav class="dropdown-content">
                 <ul class="menu">
                     <li><a href="/infos.html" class="menu_texte">Infos</a></li>
@@ -25,7 +25,6 @@
                 </ul>
                 <a href="#menu">
                     <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
-                    <a href="/index.html"><img src="/public/icon/logo-footer.svg" alt="Logo Shigeru Ban" class="logo_menu"></a>
                 </a>
             </nav>
         </div>
