--- a/billetterie.html
+++ b/billetterie.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header class="header">
-        <a href="/index.html">
-            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
+        <a class="dropbtn">
+            <img src="/public/icon/menu-blanc.svg" alt="Menu">
         </a>
         <div class="dropdown"> 
-            <button class="dropbtn">
+            <a class="dropbtn">
                 <img src="/public/icon/menu-blanc.svg" alt="Menu">
-            </button>
+            </a>
             <nav class="dropdown-content">
                 <ul class="menu">
                     <li><a href="/infos.html" class="menu_texte">Infos</a></li>
