--- a/cathedral.html
+++ b/cathedral.html
@@ -12,9 +12,9 @@
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
         </a>
         <div class="dropdown"> 
-            <button class="dropbtn">
+            <a="dropbtn">
                 <img src="/public/icon/menu-blanc.svg" alt="Menu">
-            </button>
+        </a>
             <nav class="dropdown-content">
                 <ul class="menu">
                     <li><a href="/infos.html" class="menu_texte">Infos</a></li>
