--- a/infos.html
+++ b/infos.html
@@ -13,9 +13,9 @@
         <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
     </a>
     <div class="dropdown"> 
-        <button class="dropbtn">
+        <a class="dropbtn">
             <img src="/public/icon/menu-blanc.svg" alt="Menu">
-        </button>
+        </a>
         <nav class="dropdown-content">
             <ul class="menu">
                 <li><a href="/infos.html" class="menu_texte">Infos</a></li>
@@ -27,7 +27,8 @@
                 <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
             </a>
         </nav>
-    </header>
+    </div>
+</header>
     <main>
       <section class="section__marrons">
         <h1 class="infos__titre">Infos</h1>
