--- a/shigeru-Ban.html
+++ b/shigeru-Ban.html
@@ -12,9 +12,9 @@
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
         </a>
         <div class="dropdown"> 
-            <button class="dropbtn">
+            <a class="dropbtn">
                 <img src="/public/icon/menu-blanc.svg" alt="Menu">
-            </button>
+            </a>
             <nav class="dropdown-content">
                 <ul class="menu">
                     <li><a href="/infos.html" class="menu_texte">Infos</a></li>
@@ -26,6 +26,7 @@
                     <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
                 </a>
             </nav>
+        </div>
     </header>
 <main>
     <section class="section">
