correction erreur sur le header

--- a/billetterie.html
+++ b/billetterie.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header class="header">
-        <a class="dropbtn">
-            <img src="/public/icon/menu-blanc.svg" alt="Menu">
+        <a href="/index.html">
+            <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
         </a>
         <div class="dropdown"> 
             <a class="dropbtn">
@@ -23,7 +23,7 @@
                     <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
                 </ul>
                 <a href="#menu">
-                    <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
+                    <img id="croix" src="/public/icon/croix-menu-marron.svg" alt="Retour" class="close">
                 </a>
             </nav>
         </div>
