--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
                 </ul>
                 <a href="#menu">
-                    <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
+                    <img id="croix" src="/public/icon/croix-menu-marron.svg" alt="Retour" class="close">
                 </a>
             </nav>
         </div>
