mise en valeur faible des légende

--- a/maison.html
+++ b/maison.html
@@ -33,17 +33,17 @@
         <h2 class="Batiment__Titre"> <strong>Crescent House</strong></h2>
         <article>
             <img class="Batiment__img"  class="Batiment__img" src="/public/img/maison/maison.webp" alt="Vue extérieur de la Crescent House">
-            <p class="légende">Vue extérieur de la Crescent House</p>
+            <p class="légende"><em>extérieur de la Crescent House</em></p>
             <p class="Batiment_texte">Ce site est situé sur le versant nord d'un quartier de villas au sud de Hakone. Le paysage au nord offre une vue imprenable sur le mont Fuji par beau temps, sans aucune autre maison en périphérie.  </p>
         </article>
         <article>
             <img class="Batiment__img" src="/public/img/maison/maison2.webp" alt="image vue d'en bas de la maison">
-            <p class="légende">image vue d'en bas de la maison</p>
+            <p class="légende"> <em>image vue d'en bas de la maison</em></p>
             <p  class="Batiment_texte">Par contre, avec les maisons de tous les autres côtés, on est ramené à la réalité. Afin de bloquer les lignes de site de tous les côtés, l'idée d'un plan en forme de croissant correspondant au site et s'ouvrant vers le nord a été créée. La section transversale ressemble à la lettre « C » (ou plutôt à la lettre « U » sur le côté).</p>
         </article>
         <article>
             <img class="Batiment__img" src="/public/img/maison/maison2.webp" alt="image de l'architecture intérieur">
-            <p class="légende">image de l'architecture intérieur</p>
+            <p class="légende"> <em>image de l'architecture intérieur</em></p>
         </article>
     </section> 
     <section class="section__marrons">
