mise en valeur faible sur toute mes légende

--- a/Ponpidou.html
+++ b/Ponpidou.html
@@ -33,28 +33,28 @@
         <h2 class="Batiment__Titre"> <strong>Centre Ponpidou Metz</strong></h2>
         <article>
             <img class="Batiment__img"  class="Batiment__img" src="/public/img/Ponpidou/ponpidou1.webp" alt="Vue extérieur du  centre Ponpidou">
-            <p class="légende">Vue extérieur du  centre Ponpidou</p>
+            <p class="légende"><em>Vue extérieur du  centre Ponpidou</em></p>
             <p class="Batiment_texte">Cette annexe du Centre Pompidou à Paris a été construite à Metz comme un complexe comprenant un musée d'art et un théâtre. </p>
         </article>
         <article>
             <img class="Batiment__img" src="/public/img/Ponpidou/ponpidou3.webp" alt="Vue extérieur du  toit du centre Ponpidou">
-            <p class="légende">Vue extérieur du  toit du centre Ponpidou</p>
+            <p class="légende"><em>Vue extérieur du  toit du centre Ponpidou</em></p>
             <p  class="Batiment_texte">En plaçant un grand toit dans le parc et en ouvrant la façade à volets en verre sur tout le périmètre, une transition continue de l'espace intérieur et extérieur est créée. </p>
         </article>
         <article>
             <img class="Batiment__img" src="/public/img/Ponpidou/ponpidou2.webp" alt="Vue extérieur du  centre Ponpidou de nuit">
-            <p class="légende">Vue extérieur du  centre Ponpidou de nuit</p>
+            <p class="légende"><em>Vue extérieur du  centre Ponpidou de nuit</em></p>
         </article>
         <h3 class="Batiment__intertitre">Une fabrication hors norme </h3>
         <article>
             <p class="Batiment_texte">Le toit est fabriqué à partir de bois lamellé selon un motif tissé hexagonal composé sous la forme d'un chapeau chinois tissé en bambou. Ce grand toit en bois est recouvert d'une membrane en fibre de verre enduite de téflon et permet à une douce lumière naturelle de filtrer à l'intérieur.</p>
             <img class="Batiment__img" src="/public/img/Ponpidou/ponpidou4.webp" alt="Vue intérieur du  centre Ponpidou">
-            <p class="légende">Vue intérieur du  centre Ponpidou</p>
+            <p class="légende"><em>Vue intérieur du  centre Ponpidou</em></p>
         </article>
         <article>
             <p class="Batiment_texte"> Les galeries principales sont une série de tubes rectilignes en porte-à-faux de 90 mx 15 m qui flottent au-dessus du sol, et leurs extrémités vitrées pointent en direction de la cathédrale et d'autres monuments de la ville.</p>
             <img class="Batiment__img" src="/public/img/Ponpidou/ponpidou5.webp" alt="Vue sur la cathédral de Metz depuis le musée">
-            <p class="légende">Vue sur la cathédral de Metz depuis le musée</p>
+            <p class="légende"><em>Vue sur la cathédral de Metz depuis le musée</em></p>
         </article>
     </section> 
     <section class="section__marrons">
