--- a/cathedral.html
+++ b/cathedral.html
@@ -33,23 +33,23 @@
         <h2 class="Batiment__Titre"> <strong>Cardboard Cathedral</strong></h2>
         <article>
             <img class="Batiment__img"  class="Batiment__img" src="/public/img/eglise/eglise.webp" alt="Vue intérieur de la Cardboard Cathedral">
-            <p class="légende">Vue intérieur de la Cardboard Cathedral</p>
+            <p class="légende"> <em>Vue intérieur de la Cardboard Cathedral</em></p>
             <p class="Batiment_texte">Le tremblement de terre de Christchurch en février 2011 (magnitude 6,3) a infligé des dégâts dévastateurs à la cathédrale de Christchurch, symbole de la ville.</p>
         </article>
         <article>
             <img class="Batiment__img" src="/public/img/eglise/eglise2.webp" alt="Image des vitraux de la cathédral">
-            <p class="légende">Image des vitraux de la cathédral</p>
+            <p class="légende"> <em>Image des vitraux de la cathédral</em></p>
             <p  class="Batiment_texte">Face à cette situation, il a été demandé à l’équipe et l’architecte Shigeru Ban de concevoir une nouvelle cathédrale provisoire.</p>
         </article>
         <article>
             <img class="Batiment__img" src="/public/img/eglise/eglise3.webp" alt="Vue extérieur de la cathédral avant rénovation">
-            <p class="légende">Vue extérieur de la cathédral avant rénovation</p>
+            <p class="légende"> <em>Vue extérieur de la cathédral avant rénovation</em></p>
         </article>
         <h3 class="Batiment__intertitre">Une fabrication hors norme </h3>
         <article>
             <p class="Batiment_texte">Des tubes en papier de longueur égale et des conteneurs d'expédition de 20 pieds forment la forme triangulaire. Puisque la géométrie est déterminée par le plan et les élévations de la cathédrale d’origine, chaque angle des tubes de papier change progressivement. </p>
             <img class="Batiment__img" src="/public/img/eglise/eglise4.webp" alt="Vue extérieur de nuit">
-            <p class="légende">Vue extérieur de nuit</p>
+            <p class="légende"> <em>Vue extérieur de nuit</em></p>
             <p class="Batiment_texte"> Cette cathédrale, d'une capacité de 700 personnes, peut être utilisée comme espace événementiel et espace de concert.</p>
         </article>
     </section> 
