--- a/hotel.html
+++ b/hotel.html
@@ -33,22 +33,22 @@
         <h2 class="Batiment__Titre"> <strong>ZEN Wellness SEINEI</strong></h2>
         <article>
             <img class="Batiment__img"  class="Batiment__img" src="/public/img/hotel/hotel.webp" alt="Vue globale de l'hotel ">
-            <p class="légende">Vue globale de l'hotel </p>
+            <p class="légende"><em>Vue globale de l'hotel</em> </p>
             <p class="Batiment_texte">Il s'agit d'un projet de centre d'hébergement où les clients peuvent faire l'expérience du « zazen » sur un petit site luxuriant de l'île d'Awaji.</p>
         </article>
         <article>
             <img class="Batiment__img" src="/public/img/hotel/hotel2.webp" alt="image de la structure extérieur">
-            <p class="légende">image de la structure extérieur</p>
+            <p class="légende"><em>image de la structure extérieur</em></p>
             <p  class="Batiment_texte">Il est situé sur une crête du site et le bâtiment a une extrémité plus courte de 7,2 m et une extrémité plus longue de 90 m. La moitié du bâtiment est suspendue par deux bases de colonnes en acier avec des vierendeel en bois au premier étage permettant une portée de 21 m et tout le deuxième étage sera un studio zazen. </p>
         </article>
         <article>
             <img class="Batiment__img" src="/public/img/hotel/hotel3.webp" alt="Vue du mobilier de l'hotel">
-            <p class="légende">Vue du mobilier de l'hotel</p>
+            <p class="légende"><em>Vue du mobilier de l'hotel</em></p>
         </article>
         <article>
             <p class="Batiment_texte">Un café avec une série de cadres en arc PHP et une cabane sont prévus pour une future utilisation affiliée.</p>
             <img class="Batiment__img" src="/public/img/hotel/hotel4.webp" alt="image de la plateforme au dessus de l'hotel">
-            <p class="légende">image de la plateforme au dessus de l'hotel</p>
+            <p class="légende"><em>image de la plateforme au dessus de l'hotel</em></p>
         </article>
     </section> 
     <section class="section__marrons">
