--- a/shigeru-Ban.html
+++ b/shigeru-Ban.html
@@ -32,7 +32,7 @@
     <section class="section">
         <h2 class="Ban__Titre">Shigeru Ban</h2>
         <img class="Ban__img" src="/public/img/shigeruBan.webp" alt="photo de shigeru Ban">
-        <p class="légende">Shigeru Ban</p>
+        <p class="légende"><em>Shigeru Ban</em></p>
         <article>
             <h3 class="Ban__intertitre">Shigeru Ban : Entre Innovation et Durabilité</h3>
             <p classe="Ban__texet">L'univers fascinant de l'architecture contemporaine est marqué par des esprits créatifs et visionnaires qui repoussent les limites de la conception architecturale. Parmi eux, l'architecte japonais Shigeru Ban se distingue par son approche novatrice, son engagement envers la durabilité et sa capacité à créer des espaces uniques qui transcendent les frontières traditionnelles.
