--- a/simose.html
+++ b/simose.html
@@ -38,17 +38,17 @@
         </article>
         <article>
             <img class="Batiment__img" src="/public/img/simose/simose2.webp" alt="Vue de nuit de l'installation">
-            <p class="légende">Vue de nuit de l'installation</p>
+            <p class="légende"><em>Vue de nuit de l'installation</em></p>
             <p  class="Batiment_texte">Admirez les peintures japonaises et occidentales modernes et admirez la beauté de l'archipel de Setouchi depuis le toit. Tout ce que vous voyez et touchez éveillera la sensibilité des visiteurs, comme la salle d'exposition mobile inspirée des îles flottantes dans la mer de l'architecte Shigeru Ban ou le jardin nommé d'après les plantes préférées d'Emile Gallé.</p>
         </article>
         <article>
             <img class="Batiment__img" src="/public/img/simose/simose3.webp" alt="image de nuit plus global du domaine ">
-            <p class="légende">image de nuit plus global du domaine</p>
+            <p class="légende"><em>image de nuit plus global du domaine</em></p>
         </article>
         <article>
             <p class="Batiment_texte">Des espaces que vous n'avez jamais vus auparavant, des paysages au-delà de votre imagination et le charme d'une architecture dont vous ignoriez l'existence. De nombreuses surprises attendent les visiteurs. 10 villas aux allures de villa conçues par Shigeru Ban. Passez un moment de détente sur la plage surplombant les îles de Setouchi. Pour les repas, nous vous proposons une cuisine française qui profite des produits locaux. Il s'agit d'une auberge d'art où vous pourrez profiter d'une promenade dans le musée et les jardins sur place</p>
             <img class="Batiment__img" src="/public/img/simose/simose4.webp" alt="Image intérieur d'une des villa">
-            <p class="légende">Image intérieur d'une des villa</p>
+            <p class="légende"><em>Image intérieur d'une des villa</em></p>
         </article>
     </section> 
     <section class="section__marrons">
