--- a/suiden.html
+++ b/suiden.html
@@ -33,22 +33,22 @@
         <h2 class="Batiment__Titre Batiment__Titre__Maroc"> <strong>Shonai hotel Suiden terrasse spa</strong></h2>
         <article>
             <img class="Batiment__img"  class="Batiment__img" src="/public/img/suiden/suiden1.webp" alt="Vue extérieur du spa">
-            <p class="légende">Vue extérieur du spa</p>
+            <p class="légende"><em>Vue extérieur du spa</em></p>
             <p class="Batiment_texte">Conçue par l'architecte de renommée mondiale Shigeru Ban, SUIDEN TERRASSE a été conçue pour que les rizières puissent être ressenties et ressenties où que vous soyez dans le bâtiment.</p>
         </article>
         <article>
             <img class="Batiment__img" src="/public/img/suiden/suiden2.webp" alt="image des bassins extérieur du spa">
-            <p class="légende">image des bassins extérieur du spa</p>
+            <p class="légende"><em>image des bassins extérieur du spa</em></p>
             <p  class="Batiment_texte">Des plaines de Dewasanzan et Shonai à la mer du Japon. La région de Shonai, dans la préfecture de Yamagata, possède une nature riche.</p>
         </article>
         <article>
             <img class="Batiment__img" src="/public/img/suiden/suiden4.webp" alt="image du mobilier d'intérieur">
-            <p class="légende">image du mobilier d'intérieur</p>
+            <p class="légende"><em>image du mobilier d'intérieur</em></p>
         </article>
         <article>
             <p class="Batiment_texte"> Le paysage emblématique de cette terre - les rizières (« SUIDEN »） - est ce qui a inspiré la création de SUIDEN TERRASSE. Flottant au milieu des rizières, se fondant dans les paysages environnants et les paysages ruraux.</p>
             <img class="Batiment__img" src="/public/img/suiden/suiden3.webp" alt="image d'un bassin du spa">
-            <p class="légende">image d'un bassin du spa</p>
+            <p class="légende"><em>image d'un bassin du spa</em></p>
         </article>
     </section> 
     <section class="section__marrons">
