--- a/népal.html
+++ b/népal.html
@@ -33,24 +33,24 @@
         <h2 class="Batiment__Titre"> <strong>Khumjung secondary school </strong></h2>
         <article>
             <img class="Batiment__img"  class="Batiment__img" src="/public/img/nepal/nepal1.webp" alt="image de l'inoguration de l'école">
-            <p class="légende">image de l'inoguration de l'école</p>
+            <p class="légende"><em>image de l'inoguration de l'école</em></p>
             <p class="Batiment_texte">Située à 3 790 m d'altitude au Népal, l'école de Khumjung a été construite pour la première fois par le premier alpiniste du mont Everest, Sir Edmund Hillary, en 1961.</p>
         </article>
         <article>
             <img class="Batiment__img" src="/public/img/nepal/nepal2.webp" alt="image de l'intérieur de l'école">
-            <p class="légende">image de l'intérieur de l'école</p>
+            <p class="légende"><em>image de l'intérieur de l'école</em></p>
             <p  class="Batiment_texte">Le tremblement de terre d'avril 2015 a également laissé l'école de Khumjung dans un environnement dangereux pour les 300 étudiants. <br>
                 L’université Doshisha Le Club Alpin a lancé un projet de remplacement d'un bâtiment de classe.</p>
         </article>
         <article>
             <img class="Batiment__img" src="/public/img/nepal/nepal3.webp" alt="Vue extérieur de l'école">
-            <p class="légende">Vue extérieur de l'école</p>
+            <p class="légende"><em>Vue extérieur de l'école</em></p>
         </article>
         <h3 class="Batiment__intertitre">Une fabrication hors norme </h3>
         <article>
             <p class="Batiment_texte">Les murs en pierre sont couramment observés dans toute la région. Pour renforcer les murs afin qu'ils deviennent résistants aux tremblements de terre, l’architecte et son équipe à conçue une unité murale dans laquelle la charpente en bois fait office de structure principale et les pierres trouvées localement sont empilées pour fournir une clôture. Pour garantir la sécurité, l’architecte et son équipe à effectué des tests structurels de cette charpente en bois au Japon.</p>
             <img class="Batiment__img" src="/public/img/nepal/nepal4.webp" alt="Vue plus global de l'environnement extérieur de l'école">
-            <p class="légende">Vue plus global de l'environnement extérieur de l'école</p>
+            <p class="légende"><em>Vue plus global de l'environnement extérieur de l'école</em></p>
         </article>
     </section> 
     <section class="section__marrons">
