finition de la frise

--- a/Oeuvres.html
+++ b/Oeuvres.html
@@ -44,32 +44,32 @@
         <article class="Oeuvres">
             <h3 class="Oeuvres__dates">2010</h3>
             <a href="/Ponpidou.html"><img src="/public/img/Oeuvres/oeuvres4.webp" alt="Centre Ponpidou Metz" class="Oeuvres__img"></a>
-            <a href="/Ponpidou.html" class="Oeuvres__nom  Oeuvres__nom_bis">Centre Ponpidou Metz</a>
+            <a href="/Ponpidou.html" class="Oeuvres__nom  ">Centre Ponpidou Metz</a>
         </article>
         <article class="Oeuvres">
             <h3 class="Oeuvres__dates">2013</h3>
             <a href="/cathedral.html"><img src="/public/img/Oeuvres/oeuvres1.webp" alt="Cardboard Cathedral" class="Oeuvres__img"></a>
-            <a href="/cathedral.html" class="Oeuvres__nom  Oeuvres__nom_bis">Cardboard Cathedral</a>
+            <a href="/cathedral.html" class="Oeuvres__nom  ">Cardboard Cathedral</a>
         </article>
         <article class="Oeuvres">
             <h3 class="Oeuvres__dates">2017</h3>
             <a href="/népal.html"><img src="/public/img/Oeuvres/oeuvres7.webp" alt="Khumjung secondary school " class="Oeuvres__img"></a>
-            <a href="/népal.html" class="Oeuvres__nom  Oeuvres__nom_bis">Khumjung secondary school </a>
+            <a href="/népal.html" class="Oeuvres__nom ">Khumjung secondary school </a>
         </article>
         <article class="Oeuvres">
             <h3 class="Oeuvres__dates">2021</h3>
             <a href="/suiden.html"><img src="/public/img/Oeuvres/oeuvres8.webp" alt="Shonai hotel Suiden terrasse spa " class="Oeuvres__img"></a>
-            <a href="/suiden.html" class="Oeuvres__nom Oeuvres__nom_bis">Shonai hotel Suiden terrasse spa</a>
+            <a href="/suiden.html" class="Oeuvres__nom ">Shonai hotel Suiden terrasse spa</a>
         </article>
         <article class="Oeuvres">
             <h3 class="Oeuvres__dates">2022</h3>
             <a href="/hotel.html"><img src="/public/img/Oeuvres/oeuvres6.webp" alt="ZEN Wellness SEINEI" class="Oeuvres__img"></a>
-            <a href="/hotel.html" class="Oeuvres__nom  Oeuvres__nom_bis">ZEN Wellness SEINEI</a>
+            <a href="/hotel.html" class="Oeuvres__nom  ">ZEN Wellness SEINEI</a>
         </article>
         <article class="Oeuvres">
             <h3 class="Oeuvres__dates">2023</h3>
             <a href="/maroc.html"><img src="/public/img/Oeuvres/oeuvres2.webp" alt="Temporary housing in Marrakesh" class="Oeuvres__img"></a>
-            <a href="/maroc.html" class="Oeuvres__nom Oeuvres__nom_bis">Temporary housing in Marrakesh</a>
+            <a href="/maroc.html" class="Oeuvres__nom ">Temporary housing in Marrakesh</a>
         </article>
         <article class="Oeuvres">
             <h3 class="Oeuvres__dates">2023</h3>
