--- a/infos.html
+++ b/infos.html
@@ -23,7 +23,7 @@
                 <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
                 <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
             </ul>
-            <a href="#menu">
+            <a href="./">
                 <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
             </a>
         </nav>
