--- a/Oeuvres.html
+++ b/Oeuvres.html
@@ -6,6 +6,7 @@
     <title>L'art de Shigeru Ban</title>
     <link rel="stylesheet" href="src/css/style.css" />
     <script src="//unpkg.com/alpinejs" defer></script>
+    <script defer="" src="https://unpkg.com/alpinejs@3.4.2/dist/cdn.min.js"></script>
 </head>
 <body>
     <header class="header">
@@ -23,7 +24,7 @@
                     <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
                     <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
                 </ul>
-                <a href="#menu">
+                <a href="./">
                     <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
                 </a>
             </nav>
