--- a/index.html
+++ b/index.html
@@ -12,22 +12,26 @@
         <a href="/index.html">
             <img src="/public/icon/LOGO.svg" alt="Logo Shigeru Ban" class="header-logo">
         </a>
-        <div class="dropdown"> 
-            <a class="dropbtn">
-                <img src="/public/icon/menu-blanc.svg" alt="Menu">
-            </a>
-            <nav class="dropdown-content">
-                <ul class="menu">
-                    <li><a href="/infos.html" class="menu_texte">Infos</a></li>
-                    <li><a href="/billetterie.html" class="menu_texte">Billetterie</a></li>
-                    <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
-                    <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
-                </ul>
-                <a href="#menu">
-                    <img id="croix" src="/public/icon/croix-menu-marron.svg" alt="Retour" class="close">
-                </a>
-            </nav>
-        </div>
+        <a class="dropbtn">
+            <img src="/public/icon/menu-blanc.svg" alt="Menu" 
+        aria-controls="mainNav"
+        @click="menuIsOpen = ! menuIsOpen"
+        class="header_menuBtn"
+        >
+    </a>
+        <nav 
+          id="mainNav" 
+          x-show="menuIsOpen" 
+          x-transition.duration.800ms
+          class="menu"
+        >
+          <ul class="menu-list">
+            <li><a href="/infos.html" class="menu_texte">Infos</a></li>
+            <li><a href="/billetterie.html" class="menu_texte">Billetterie</a></li>
+            <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
+            <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
+          </ul>
+        </nav>
         <h1> Expositions </h1>
         <hr>
         <h2 class="header-titre2"><strong> L'art de Shigeru Ban</strong></h2>
