--- a/maroc.html
+++ b/maroc.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L'art de Shigeru Ban</title>
     <link rel="stylesheet" href="src/css/style.css" />
+    <script defer="" src="https://unpkg.com/alpinejs@3.4.2/dist/cdn.min.js"></script>
 </head>
 <body>
     <header class="header">
@@ -22,7 +23,7 @@
                     <li><a href="/shigeru-Ban.html" class="menu_texte" >Shigeru Ban</a></li>
                     <li><a href="/Oeuvres.html" class="menu_texte">Oeuvres</a></li>
                 </ul>
-                <a href="#menu">
+                <a href="./">
                     <img src="/public/icon/croix-menu-marron.svg" alt="croix-menu-marron" class="close">
                 </a>
             </nav>
